feat: 完成主执行链路和任务协作基础设施
主要变更:
- 新增 CharacterRuntimeBinder 用于注入运行时依赖(ReActExecutor、PromptManager等)
- 新增 TaskBridge/DefaultTaskBridge 解耦任务执行与编排
- 新增 WorkspaceTaskExecutionService 管理子任务执行和依赖排序
- 新增 TaskContinuationResolver 判断消息续跑还是新任务
- 新增 DefaultWorkflowExecutor 实现工作流执行
- 新增 MaterialParser/MaterialParser 接口支持物料解析
- 新增 ChatRoom 任务协作方法(sendTaskUpdateMessage等)
- 删除 org.dragon.character.task.* 旧任务类,统一到 org.dragon.task
- 扩展 ChatMessage/ChatSession 支持任务协作字段
- Character 类移除任务管理方法,委托给 TaskBridge

M7/M8/M9/M10 完成